Add function to push library content to the DOM

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <body>
     <main>
       <h1>Library</h1>
+      <div class="library-container">
+        <ul class="library"></ul>
+      </div>
     </main>
   </body>
 </html>
