Add new book form

--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
       <div class="library-container">
         <ul class="library"></ul>
       </div>
+      <button class="new-book">NEW BOOK</button>
+      <form action="" method="post" class="new-book-form">
+        <h2>Add New Book</h2>
+        <ul>
+          <li>
+            <label for="title">Title</label>
+            <input id="title" name="title" type="text"/>
+          </li>
+          <li>
+            <label for="author">Author</label>
+            <input id="author" name="author" type="text"/>
+          </li>
+          <li>
+            <label for="pages">Pages</label>
+            <input id="pages" name="pages" type="number"/>
+          </li>
+          <li>
+            <label for="read">Have you read it?</label>
+            <input id="read" name="read" type="checkbox"/>
+          </li>
+          <button class="add-book" type="button">Add Book</button>
+        </ul>
+      </form>
     </main>
   </body>
 </html>
