Update addBookToLibrary to read form data

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <ul>
           <li>
             <label for="title">Title</label>
-            <input id="title" name="title" type="text"/>
+            <input id="title" name="title" type="text" required />
           </li>
           <li>
             <label for="author">Author</label>
-            <input id="author" name="author" type="text"/>
+            <input id="author" name="author" type="text" required />
           </li>
           <li>
             <label for="pages">Pages</label>
-            <input id="pages" name="pages" type="number"/>
+            <input id="pages" name="pages" type="number" required />
           </li>
           <li>
-            <label for="read">Have you read it?</label>
-            <input id="read" name="read" type="checkbox"/>
+            <label for="isRead">Have you read it?</label>
+            <input id="isRead" name="isRead" type="checkbox" />
           </li>
           <button class="add-book" type="button">Add Book</button>
         </ul>
