Update js to add new books to library and DOM

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <input id="pages" name="pages" type="number" required />
           </li>
           <li>
-            <label for="isRead">Have you read it?</label>
-            <input id="isRead" name="isRead" type="checkbox" />
+            <label for="is-read">Have you read it?</label>
+            <input id="is-read" name="is-read" type="checkbox" />
           </li>
           <button class="add-book" type="button">Add Book</button>
         </ul>
