--- a/index.html
+++ b/index.html
@@ -18,24 +18,15 @@
       <form action="" method="post" class="new-book-form">
         <h2>Add New Book</h2>
         <ul>
-          <li>
-            <label for="title">Title</label>
-            <input id="title" name="title" type="text" required />
-          </li>
-          <li>
-            <label for="author">Author</label>
-            <input id="author" name="author" type="text" required />
-          </li>
-          <li>
-            <label for="pages">Pages</label>
-            <input id="pages" name="pages" type="number" required />
-          </li>
+          <li><input id="title" name="title" type="text" placeholder="Title" required /></li>
+          <li><input id="author" name="author" type="text" placeholder="Author" required /></li>
+          <li><input id="pages" name="pages" type="number" placeholder="Pages" required /></li>
           <li>
             <label for="is-read">Have you read it?</label>
             <input id="is-read" name="is-read" type="checkbox" />
           </li>
-          <button class="add-book" type="button">Add Book</button>
         </ul>
+        <button class="add-book" type="button">Add Book</button>
       </form>
     </main>
   </body>
