--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   <body>
     <main>
       <h1>Library</h1>
+      <button class="new-book">NEW BOOK</button>
       <div class="library-container">
         <ul class="library"></ul>
       </div>
-      <button class="new-book">NEW BOOK</button>
-      <form action="" method="post" class="new-book-form">
-        <h2>Add New Book</h2>
+      <form action="" method="post" class="new-book-form show">
+        <div class="form-header">
+          <h2>Add New Book</h2>
+          <button class="close" type="button">✕</button>
+        </div>
         <ul>
           <li><input id="title" name="title" type="text" placeholder="Title" required /></li>
           <li><input id="author" name="author" type="text" placeholder="Author" required /></li>
