Add book card styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,37 @@
       <h1>Library</h1>
       <button class="new-book">NEW BOOK</button>
       <div class="library-container">
-        <ul class="library"></ul>
+        <ul class="library">
+          <ul class="book">
+            <li class="title">The Hobbit</li>
+            <li class="author">by J.R.R. Tolkien</li>
+            <li class="pages">295 pages</li>
+            <li class="is-read">Read</li>
+          </ul>
+          <ul class="book">
+            <li class="title">Harry Potter and the Chamber of Secrets</li>
+            <li class="author">by J.K. Rowling</li>
+            <li class="pages">341 pages</li>
+            <li class="is-read">Read</li>
+          </ul>
+          <ul class="book">
+            <li class="title">Romeo & Juliet</li>
+            <li class="author">by William Shakespeare</li>
+            <li class="pages">201 pages</li>
+            <li class="is-read">Unread</li>
+          </ul>
+          <ul class="book">
+            <li class="title">Romeo & Juliet</li>
+            <li class="author">by William Shakespeare</li>
+            <li class="pages">201 pages</li>
+            <li class="is-read">Unread</li>
+          </ul>          <ul class="book">
+            <li class="title">Romeo & Juliet</li>
+            <li class="author">by William Shakespeare</li>
+            <li class="pages">201 pages</li>
+            <li class="is-read">Unread</li>
+          </ul>
+        </ul>
       </div>
       <form action="" method="post" class="new-book-form show">
         <div class="form-header">
