Update semantic HTML for better library list layout

--- a/index.html
+++ b/index.html
@@ -12,25 +12,35 @@
     <main>
       <h1>Library</h1>
       <button class="new-book">NEW BOOK</button>
-      <div class="library-container">
+      <div class="page-container">
         <ul class="library">
-          <ul class="book">
-            <li class="title">The Hobbit</li>
-            <li class="author">by J.R.R. Tolkien</li>
-            <li class="pages">295 pages</li>
-            <li class="is-read">Read</li>
-          </ul>
-          <ul class="book">
-            <li class="title">Harry Potter and the Chamber of Secrets</li>
-            <li class="author">by J.K. Rowling</li>
-            <li class="pages">341 pages</li>
-            <li class="is-read">Read</li>
-          </ul>
-          <ul class="book">
-            <li class="title">Romeo & Juliet</li>
-            <li class="author">by William Shakespeare</li>
-            <li class="pages">201 pages</li>
-            <li class="is-read">Unread</li>
+
+          <li class="book">
+            <h2 class="title">The Hobbit</h2>
+            <ul class="book-details">
+              <li class="author">by J.R.R. Tolkien</li>
+              <li class="pages">295 pages</li>
+              <li class="is-read">Read</li>
+            </ul>
+          </li>
+
+          <li class="book">
+            <h2 class="title">Harry Potter and the Chamber of Secrets</h2>
+            <ul class="book-details">
+              <li class="author">by J.K. Rowling</li>
+              <li class="pages">341 pages</li>
+              <li class="is-read">Read</li>
+            </ul>
+          </li>
+
+          <li class="book">
+            <h2 class="title">Romeo & Juliet</h2>
+            <ul class="book-details">
+              <li class="author">by William Shakespeare</li>
+              <li class="pages">201 pages</li>
+              <li class="is-read">Unread</li>
+            </ul>
+
           </ul>
         </ul>
       </div>
