Update JS for adding books to library

--- a/index.html
+++ b/index.html
@@ -13,38 +13,9 @@
       <h1>Library</h1>
       <button class="new-book">NEW BOOK</button>
       <div class="page-container">
-        <ul class="library">
-
-          <li class="book">
-            <h2 class="title">The Hobbit</h2>
-            <ul class="book-details">
-              <li class="author">by J.R.R. Tolkien</li>
-              <li class="pages">295 pages</li>
-              <li class="is-read">Read</li>
-            </ul>
-          </li>
-
-          <li class="book">
-            <h2 class="title">Harry Potter and the Chamber of Secrets</h2>
-            <ul class="book-details">
-              <li class="author">by J.K. Rowling</li>
-              <li class="pages">341 pages</li>
-              <li class="is-read">Read</li>
-            </ul>
-          </li>
-
-          <li class="book">
-            <h2 class="title">Romeo & Juliet</h2>
-            <ul class="book-details">
-              <li class="author">by William Shakespeare</li>
-              <li class="pages">201 pages</li>
-              <li class="is-read">Unread</li>
-            </ul>
-
-          </ul>
-        </ul>
+        <ul class="library"></ul>
       </div>
-      <form action="" method="post" class="new-book-form show">
+      <form action="" method="post" class="new-book-form">
         <div class="form-header">
           <h2>Add New Book</h2>
           <button class="close" type="button">✕</button>
@@ -54,8 +25,8 @@
           <li><input id="author" name="author" type="text" placeholder="Author" required /></li>
           <li><input id="pages" name="pages" type="number" placeholder="Pages" required /></li>
           <li>
-            <label for="is-read">Have you read it?</label>
-            <input id="is-read" name="is-read" type="checkbox" />
+            <label for="read">Have you read it?</label>
+            <input id="read" name="read" type="checkbox" />
           </li>
         </ul>
         <button class="add-book" type="button">Add Book</button>
