Add remove button to cards

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <input id="read" name="read" type="checkbox" />
           </li>
         </ul>
-        <button class="add-book" type="button">Add Book</button>
+        <button class="add-book button" type="button">Add Book</button>
       </form>
     </main>
   </body>
