--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <title>Library</title>
   </head>
   <body>
-    <main>
+    <header>
       <h1>Library</h1>
-      <button class="new-book">NEW BOOK</button>
+      <button class="new-book button">+ Add Book</button>
+    </header>
+    <main>
       <div class="page-container">
         <ul class="library"></ul>
       </div>
