--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/e89148c565.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
     <title>Library</title>
   </head>
@@ -34,5 +35,22 @@
         <button class="add-book button" type="button">Add Book</button>
       </form>
     </main>
+    <footer>
+      <div class="center-container">
+        <a href="https://github.com/djsereno" target="_blank">github.com/djsereno</a>
+        <a href="https://github.com/djsereno" target="_blank" class="icon">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/dereksereno/" target="_blank" class="icon circled">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a>
+        <a href="mailto:djsereno91@gmail.com" target="_blank" class="icon circled">
+          <i class="fa-solid fa-envelope"></i>
+        </a>
+      </div>
+      <div class="right-container">
+        <a href="https://icons8.com/" target="_blank">Favicon courtesy of icons8.com</a>
+      </div>
+    </footer>
   </body>
 </html>
