Update color theme

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   </head>
   <body>
     <header>
-      <h1>Library</h1>
+      <h1>My Library</h1>
       <button class="new-book button">+ Add Book</button>
     </header>
     <main>
       <div class="page-container">
         <ul class="library"></ul>
       </div>
-      <form action="" method="post" class="new-book-form">
+      <form action="" method="post" class="new-book-form show">
         <div class="form-header">
           <h2>Add New Book</h2>
           <button class="close" type="button">✕</button>
