--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
       <div class="page-container">
         <ul class="library"></ul>
       </div>
-      <form action="" method="post" class="new-book-form show">
-        <div class="form-header">
-          <h2>Add New Book</h2>
-          <button class="close" type="button">✕</button>
-        </div>
-        <ul>
-          <li><input id="title" name="title" type="text" placeholder="Title" required /></li>
-          <li><input id="author" name="author" type="text" placeholder="Author" required /></li>
-          <li><input id="pages" name="pages" type="number" placeholder="Pages" required /></li>
-          <li>
-            <label for="read">Have you read it?</label>
-            <input id="read" name="read" type="checkbox" />
-          </li>
-        </ul>
-        <button class="add-book button" type="button">Add Book</button>
-      </form>
+      <div class="overlay">
+        <form action="" method="post" class="new-book-form">
+          <div class="form-header">
+            <h2>Add New Book</h2>
+            <button class="close" type="button">✕</button>
+          </div>
+          <ul>
+            <li><input id="title" name="title" type="text" placeholder="Title" required /></li>
+            <li><input id="author" name="author" type="text" placeholder="Author" required /></li>
+            <li><input id="pages" name="pages" type="number" placeholder="Pages" required /></li>
+            <li>
+              <label for="read">Have you read it?</label>
+              <input id="read" name="read" type="checkbox" />
+            </li>
+          </ul>
+          <button class="add-book button" type="button">Add Book</button>
+        </form>
+      </div>
     </main>
     <footer>
       <div class="center-container">
