--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <input id="read" name="read" type="checkbox" />
             </li>
           </ul>
-          <button class="add-book button" type="button">Add Book</button>
+          <button class="add-book button" type="button">+ Add Book</button>
         </form>
       </div>
     </main>
