--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/e89148c565.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.png" />
     <title>Library</title>
   </head>
   <body>
     <header>
-      <h1>My Library</h1>
+      <h1>📚 My Library</h1>
       <button class="new-book button">+ Add Book</button>
     </header>
     <main>
