--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <h2>Add New Book</h2>
             <button class="close" type="button">✕</button>
           </div>
-          <ul>
+          <ul class="inputs">
             <li><input id="title" name="title" type="text" placeholder="Title" required /></li>
             <li><input id="author" name="author" type="text" placeholder="Author" required /></li>
             <li><input id="pages" name="pages" type="number" placeholder="Pages" required /></li>
-            <li>
+            <li class="input-container">
               <label for="read">Have you read it?</label>
               <input id="read" name="read" type="checkbox" />
             </li>
@@ -52,7 +52,7 @@
         </a>
       </div>
       <div class="right-container">
-        <a href="https://icons8.com/" target="_blank">Favicon courtesy of icons8.com</a>
+        <a href="https://icons8.com/" target="_blank">Favicon by icons8.com</a>
       </div>
     </footer>
   </body>
